--- a/app/assets/stylesheets/bootstrap3/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap3/bootstrap.css.erb
@@ -4,6 +4,16 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+
+/*!
+* Let Rails know that this file will need to recompile whenever the dependency is updated.
+* http://blog.backupify.com/2014/07/29/client-side-templates-rails-way-part-2/
+*/
+//= depend_on_asset "bootstrap3/glyphicons-halflings-regular.eot"
+//= depend_on_asset "bootstrap3/glyphicons-halflings-regular.woff"
+//= depend_on_asset "bootstrap3/glyphicons-halflings-regular.ttf"
+//= depend_on_asset "bootstrap3/glyphicons-halflings-regular.svg"
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -263,8 +273,8 @@ th {
 @font-face {
   font-family: 'Glyphicons Halflings';
 
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('<%= font_path('bootstrap3/glyphicons-halflings-regular.eot') %>');
+  src: url('<%= font_path('bootstrap3/glyphicons-halflings-regular.eot') %>?#iefix') format('embedded-opentype'), url('<%= font_path('bootstrap3/glyphicons-halflings-regular.woff') %>') format('woff'), url('<%= font_path('bootstrap3/glyphicons-halflings-regular.ttf') %>') format('truetype'), url('<%= font_path('bootstrap3/glyphicons-halflings-regular.svg') %>#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
