--- a/app/assets/stylesheets/bootstrap3/font-awesome.css.erb
+++ b/app/assets/stylesheets/bootstrap3/font-awesome.css.erb
@@ -25,10 +25,20 @@
  */
 /* FONT PATH
  * -------------------------- */
+
+/*!
+* Let Rails know that this file will need to recompile whenever the dependency is updated.
+* http://blog.backupify.com/2014/07/29/client-side-templates-rails-way-part-2/
+*/
+//= depend_on_asset "bootstrap3/fontawesome-webfont.eot"
+//= depend_on_asset "bootstrap3/fontawesome-webfont.woff"
+//= depend_on_asset "bootstrap3/fontawesome-webfont.ttf"
+//= depend_on_asset "bootstrap3/fontawesome-webfont.svg"
+
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.0.1');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff?v=4.0.1') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.0.1') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');
+  src: url('<%= font_path('bootstrap3/fontawesome-webfont.eot') %>?v=4.0.1');
+  src: url('<%= font_path('bootstrap3/fontawesome-webfont.eot') %>?#iefix&v=4.0.1') format('embedded-opentype'), url('<%= font_path('bootstrap3/fontawesome-webfont.woff') %>?v=4.0.1') format('woff'), url('<%= font_path('bootstrap3/fontawesome-webfont.ttf') %>?v=4.0.1') format('truetype'), url('<%= font_path('bootstrap3/fontawesome-webfont.svg') %>?v=4.0.1#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
